# pybind11_tpl

./: CMakeLists.txt  Makefile  README.md  example.cpp  main.cpp  test.py
ex/callback/: CMakeLists.txt  build.sh  main.cpp  test.py  test2.py  test3.py
ex/callback2/: CMakeLists.txt  main.cpp  test.py
ex/class/: CMakeLists.txt  example.cpp  main.cpp  test.py
ex/embed/: CMakeLists.txt  Makefile  main.cpp
ex/embed_thread/: CMakeLists.txt  main.cpp
